-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.4
-
None
-
Windows
-
6ce4342b8c44c533fbe471d925ff412cd3f3df46 04d3a89e20d49a3b5015b071bfdedc81973b090c
qmake produces an invalid vcxproj file if there are two resource files defined for a project: one for debug and one for release. When opening the VS project there will be an error stating that the project file can not be loaded, there are multiple root elements. Same definition works when the project is compiled with Creator or in command line. The issue can be reproduced with the following definition:
CONFIG(debug, debug|release) {
RESOURCES += application_d.qrc
} else {
RESOURCES += application.qrc
}
For Gerrit Dashboard: QTBUG-30373 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
95666,2 | remove special handling for the "Deployment Files" filter | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
95671,5 | vcxproj: fix custom build steps in different build variants | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |